<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switch_enable_bt"
        android:text="@string/on_off_bluetooth"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/frame_message"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_message"
            android:text="@string/bluetooth_off"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/frame_control"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_enable_search"
            android:layout_marginTop="8dp"
            android:text="@string/start_searching"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/pb_progress"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/lv_bt_device"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/frameDataControls"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_disconnect"
            android:text="@string/disconnect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_console"
            android:layout_below="@+id/btn_disconnect"
            android:layout_marginTop="32dp"
            android:lines="1"
            android:editable="false"
            android:cursorVisible="false"
            android:scrollbars="none"
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/start_data_receiving"
            android:layout_below="@+id/et_console"
            android:text="@string/start_data_receiving"
            android:layout_width="match_parent"
            android:textOff="Показать график"
            android:textOn="Спрятать график"
            android:textSize="20sp"
            android:textColor="@color/start_data_receiving"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/get_x"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/start_data_receiving"
            android:text="График Х"/>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/gv_graph"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/get_x"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </RelativeLayout>


</LinearLayout>